refactoring version 4